--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.6"
+httpx = "^0.27.0"
+faker = "^25.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
